# problem_solving_with_search

./: .gitignore  CMakeLists.txt  main.cpp
State/: Utils.cpp  Utils.h
src/: CMakeLists.txt
src/Demo/: CMakeLists.txt
src/Demo/src/: demo.cpp
src/PSWS.Search/: CMakeLists.txt
src/PSWS.Search/include/PSWS.Search/: SearchTree.h
src/PSWS.Search/src/: SearchTree.cpp
src/PSWS.StateGenerator/: CMakeLists.txt
src/PSWS.StateGenerator/include/PSWS.StateGenerator/: Generator.h
src/PSWS.StateGenerator/src/: Generator.cpp
src/PSWS.StateNode/: CMakeLists.txt
src/PSWS.StateNode/include/PSWS.StateNode/: StateNode.h
src/PSWS.StateNode/src/: StateNode.cpp
